--- a/aomtang/templates/base.html
+++ b/aomtang/templates/base.html
@@ -9,7 +9,25 @@
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.js"></script>
 </head>
 <body>
-    <h1>Base</h1>
+  <div class="ui secondary pointing menu">
+    <a class="item">
+      Home
+    </a>
+    <a class="item active">
+      Manage
+    </a>
+    <a class="item">
+      acount
+    </a>
+    <a class="item">
+      setting
+    </a>
+    <div class="right menu">
+      <a class="ui item">
+        Logout
+      </a>
+    </div>
+  </div>
     {% block content %}
     {% endblock %}
 </body>
