--- a/aomtang/templates/base.html
+++ b/aomtang/templates/base.html
@@ -7,25 +7,28 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.js"></script>
-</head>
+    <link rel="stylesheet" href="/aomtang/static/style.css">
+  </head>
 <body>
-  <div class="ui secondary pointing menu">
-    <a class="item">
-      Home
-    </a>
-    <a class="item active">
-      Manage
-    </a>
-    <a class="item">
-      acount
-    </a>
-    <a class="item">
-      setting
-    </a>
-    <div class="right menu">
-      <a class="ui item">
-        Logout
+  <div class="ui inverted segment">
+    <div class="ui inverted secondary menu">
+      <a class="item">
+        <i class="wallet icon" style="visibility: visible;"></i>
       </a>
+      <a class="item active">
+        Home
+      </a>
+      <a class="item">
+        Wallet
+      </a>
+      <a class="item">
+        Saving money
+      </a>
+      <div class="right menu">
+        <a class ="item">
+          Profile
+        </a>
+      </div>
     </div>
   </div>
     {% block content %}
