--- a/aomtang/templates/welcome_page/welcome.html
+++ b/aomtang/templates/welcome_page/welcome.html
@@ -1,6 +1,4 @@
 {% block content %}
-
-<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,10 +43,9 @@
                 Welcome to Aomtang!
             </h1>
             <div style="text-align: center;">
-                <a href="{{url_for('home')}}">
-                    <button class="ui inverted green button"
-                        href="{{url_for('home')}}">
-                        Green
+                <a href="{{url_for('login_or_register')}}">
+                    <button class="ui inverted green button">
+                        เข้าสู่เว็บไซต์
                     </button>
                 </a>
             </div>
@@ -66,5 +63,4 @@
         </div>
     </div>
 </body>
-</html>
 {% endblock %}
