--- a/aomtang/templates/register_page/register.html
+++ b/aomtang/templates/register_page/register.html
@@ -1,35 +1,48 @@
 {% extends "base.html" %}
 {% block title %}Register{% endblock %}
 {% block content %}
-<form class="ui form" method="POST" action="/register">
-    <h1>Register</h1>
-    <div class="field">
-      <label>First Name</label>
-      <input 
-            type="text" 
-            id="name"
-            name="name"  
-            placeholder="Name"
-        />
+<div class="ui grid">
+  <div class="three column row">
+    <div class="column"></div>
+    <div class="column">
+      <form class="ui form" method="POST" action="/register">
+        <div style="height: 20px;"></div>
+        <h1 style="text-align: center;">Register</h1>
+        <div class="field">
+          <label>Name</label>
+          <input 
+                type="text" 
+                id="name"
+                name="name"
+                aria-describedly="emailHelp"  
+                placeholder="Enter email"
+            />
+          <label>Email</label>
+          <input 
+                type="text" 
+                id="email"
+                name="email"
+                aria-describedly="emailHelp"  
+                placeholder="Enter email"
+            />
+        </div>
+        <div class="field">
+          <label>Password</label>
+          <input 
+                type="password" 
+                id="password"
+                name="password" 
+                placeholder="Enter password"
+            />
+          </div>
+          <div>
+            <button class="fluid ui button" type="submit" style="background-color: #4ECCA3; color: #EEEEEE;">Login</button>
+          </div>
+      </form>
+  </div>
+  
     </div>
-    <div class="field">
-      <label>Email</label>
-      <input 
-            type="text" 
-            id="email"
-            name="email" 
-            placeholder="Email"
-        />
-    </div>
-    <div class="field">
-        <label>Password</label>
-        <input 
-              type="password" 
-              id="password"
-              name="password" 
-              placeholder="Password"
-        />
-    </div>
-    <button class="ui button" type="submit"> Submit </button>
-  </form>
+    <div class="column"></div>
+  </div>
+</div>
 {% endblock %}
