--- a/aomtang/templates/home_page/home.html
+++ b/aomtang/templates/home_page/home.html
@@ -20,7 +20,7 @@
     margin: auto;
     background-color: #EEEEEE;
     height: auto;">
-    <a>
+    <a href="{{url_for('income_expense')}}">
         <button class="ui button"
                 style= "height: 200px;
                         width: 24.8%;
@@ -28,7 +28,7 @@
                         color: #232931; 
                         font-size: 30px;">Income and Expense</button>
     </a>
-    <a>
+    <a href="{{url_for('saving')}}">
         <button class="ui button"
                 style= "height: 200px;
                         width: 24.8%;
@@ -36,7 +36,7 @@
                         color: #232931; 
                         font-size: 30px;">Saving</button>
     </a>
-    <a>
+    <a href="{{url_for('news')}}">
         <button class="ui button"
                 style= "height: 200px;
                         width: 24.8%;
@@ -44,7 +44,7 @@
                         color: #232931;
                         font-size: 30px;">News</button>
     </a>
-    <a>
+    <a href="{{url_for('profile')}}">
         <button class="ui button"
                 style= "height: 200px;
                         width: 24.8%;
