--- a/aomtang/templates/base.html
+++ b/aomtang/templates/base.html
@@ -22,11 +22,17 @@
       href="{{url_for('news')}}">
         News
       </a>
-      <a class="item">
-        Saving money
+      <a class="item"
+      href="{{url_for('income_expense')}}">
+      income_expense
+      </a>
+      <a class="item"
+      href="{{url_for('saving')}}">
+      saving
       </a>
       <div class="right menu">
-        <a class ="item">
+        <a class ="item"
+        href="{{url_for('profile')}}">
           Profile
         </a>
       </div>
